--- a/index.html
+++ b/index.html
@@ -15,19 +15,8 @@ import{ initializeApp }from"firebase/app";
 // https://firebase.google.com/docs/web/setup#available-libraries
 
 // Your web app's Firebase configuration
-        const firebaseConfig = {
-          apiKey: "SEU_API_KEY_REAL", 
-          authDomain: "SEU_AUTH_DOMAIN",
-          projectId: "SEU_PROJECT_ID",
-          storageBucket: "SEU_STORAGE_BUCKET",
-          messagingSenderId: "SEU_MESSAGING_SENDER_ID",
-          appId: "SEU_APP_ID"
-        };
-        
-        // As funções de inicialização precisam ser importadas como módulos
-        const app = firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore(app); // Conecta o banco de dados ao app
-    </script>
+        <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
@@ -386,4 +375,5 @@ window.onload = updateDashboard;
 
 </body>
 </html>
+
 
