--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
 
     <script>
-        // ⚠️ SUBSTITUA OS VALORES ABAIXO PELOS SEUS REAIS DO FIREBASE ⚠️
+        // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Your web app's Firebase configuration
         const firebaseConfig = {
           // Sua chave real de 39 caracteres que o Firebase te deu:
           apiKey: "SUA_API_KEY_REAL_AQUI", 
@@ -327,3 +332,4 @@ window.onload = updateDashboard;
 </body>
 </html>
                 
+
