--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
 
     <script>
-// Import the functions you need from the SDKs you need
+        // Import the functions you need from the SDKs you need
 import { initializeApp } from "firebase/app";
 // TODO: Add SDKs for Firebase products that you want to use
 // https://firebase.google.com/docs/web/setup#available-libraries
 
 // Your web app's Firebase configuration
 const firebaseConfig = {
-  apiKey: "AIzaSyC73PFnSCFomnhKmP6FQ-Drzk1sFIKHOms",
-  authDomain: "logistica-dashboard.firebaseapp.com",
-  projectId: "logistica-dashboard",
-  storageBucket: "logistica-dashboard.firebasestorage.app",
-  messagingSenderId: "1057102304003",
-  appId: "1:1057102304003:web:1ef8130a0ddb590fb74f36"
-};
+          apiKey: "AIzaSyC73PFnSCFomnhKmP6FQ-Drzk1sFIKHOms", // Sua chave real
+          authDomain: "logistica-dashboard.firebaseapp.com",
+          projectId: "logistica-dashboard",
+          storageBucket: "logistica-dashboard.firebasestorage.app",
+          messagingSenderId: "1057102304003",
+          appId: "1:1057102304003:web:1ef8130a0ddb590fb74f36"
+        };
 
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
+        // Inicializa o Firebase usando a sintaxe V8
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore(); // Cria a variável 'db' que o código usa
     </script>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
     
@@ -321,5 +321,6 @@ window.onload = updateDashboard;
 </body>
 </html>
                 
+
 
 
